* Fix radio button spacing * Support `key` field for counter, so that counter can be reset.

--- a/scripts/src/form/form.scss
+++ b/scripts/src/form/form.scss
@@ -216,3 +216,7 @@
 .hidden {
     display: none;
 }
+
+.radio-inline {
+    margin-left: 15px;
+}
